--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -14,17 +14,6 @@
   user-select: none;
 }
 
-.puzzle-area {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 300px;
-  border: 2px dashed black;
-  background-color: white;
-  transition: background-color 0.2s;
-}
-
 .dropped-piece {
   padding: 20px;
   background-color: #ffcc00;
@@ -34,9 +23,9 @@
 
 .puzzle-area {
   position: relative;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   width: 100%;
   height: 300px;
   border: 2px dashed black;
@@ -48,4 +37,8 @@
   position: relative;
   width: 100%;
   height: 100%;
+}
+
+.puzzle-pieces-row {
+  display: flex;
 }
