--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -28,7 +28,7 @@
   justify-content: center;
   align-items: center; */
   width: 100%;
-  height: 300px;
+  min-height: 500px;
   border: 2px dashed black;
   background-color: white;
   transition: background-color 0.2s;
